Tier3-Project/main.tf
# We strongly recommend using the required_providers block to set the
# Azure Provider source and version being used
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "=5.0.0"
    }
  }
}

# Configure the Microsoft Azure Provider
provider "azurerm" {
  features {}
}

locals {
  Web-ASG = "azurerm_application_security_group.Asg01.id"
  App-ASG = "azurerm_application_security_group.Asg02.id"
  Db-ASG  = "azurerm_application_security_group.Asg03.id"
}



# Create a resource group
resource "azurerm_resource_group" "rg01" {
  name     = "${var.rg_name}"
  location = "${var.location}"
}

# Create a virtual network within the resource group
resource "azurerm_virtual_network" "Vnet01" {
  name                = "${var.vnet_name}"
  resource_group_name = azurerm_resource_group.rg01.name
  location            = azurerm_resource_group.rg01.location
  address_space       = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "Snet01" {
  name          = "${var.Snet01}"
  resource_group_name = azurerm_resource_group.rg01.name
  virtual_network_name = azurerm_virtual_network.Vnet01.name
  address_prefixes = ["10.0.1.0/24"]
}

resource "azurerm_subnet" "Snet02" {
  name          = "${var.Snet02}"
  resource_group_name = azurerm_resource_group.rg01.name
  virtual_network_name = azurerm_virtual_network.Vnet01.name
  address_prefixes = ["10.0.2.0/24"]
}

resource "azurerm_subnet" "Snet03" {
  name          = "${var.Snet03}"
  resource_group_name = azurerm_resource_group.rg01.name
  virtual_network_name = azurerm_virtual_network.Vnet01.name
  address_prefixes = ["10.0.3.0/24"]
}

resource "azurerm_subnet" "Snet04" {
  name          = "${var.Snet04}"
  resource_group_name = azurerm_resource_group.rg01.name
  virtual_network_name = azurerm_virtual_network.Vnet01.name
  address_prefixes = ["10.0.4.0/26"]
}

resource "azurerm_subnet" "Snet05" {
  name          = "${var.Snet05}"
  resource_group_name = azurerm_resource_group.rg01.name
  virtual_network_name = azurerm_virtual_network.Vnet01.name
  address_prefixes = ["10.0.5.0/26"]
}

resource "azurerm_application_security_group" "Asg01" {
  name                = "Web-Asg"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
}
resource "azurerm_network_security_group" "Nsg01" {
  name                = "WEBNSG"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  security_rule {
    name                       = "Allow-Internet"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "Internet"
    destination_application_security_group_ids = [
      azurerm_application_security_group.Asg01.id
    ]
  }
}

resource "azurerm_application_security_group" "Asg02" {
  name                = "App-Asg"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
}

resource "azurerm_network_security_group" "Nsg02" {
  name                = "AppNSG"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

security_rule {
    name                       = "Allow-Web-To-App"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "8080"
    source_application_security_group_ids = [azurerm_application_security_group.Asg01.id]
    destination_application_security_group_ids = [azurerm_application_security_group.Asg02.id]
}
 
}

resource "azurerm_application_security_group" "Asg03" {
  name                = "DB-Asg"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
}

resource "azurerm_network_security_group" "Nsg03" {
  name                = "DBNSG"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

security_rule {
    name                       = "Allow-App-To-DB"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "1433"
    source_application_security_group_ids = [azurerm_application_security_group.Asg02.id]
    destination_application_security_group_ids = [azurerm_application_security_group.Asg03.id]
  }


}

resource "azurerm_network_interface" "nic01" {
  name                = "Web-nic"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.Snet01.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_windows_virtual_machine" "VM01" {
  name                = "Web-VM"
  resource_group_name = azurerm_resource_group.rg01.name
  location            = "UkSouth"
  size                = "Standard_D2as_v7"
  admin_username      = "azureuser"
  admin_password      = "**************"
  network_interface_ids = [
    azurerm_network_interface.nic01.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }
}

resource "azurerm_network_interface" "nic02" {
  name                = "Web-nic02"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.Snet01.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_windows_virtual_machine" "VM02" {
  name                = "Web-VM02"
  resource_group_name = azurerm_resource_group.rg01.name
  location            = "East US"
  size                = "Standard_D2as_v7"
  admin_username      = "azureuser"
  admin_password      = "***********"
  network_interface_ids = [
    azurerm_network_interface.nic02.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }
}

resource "azurerm_network_interface" "nic03" {
  name                = "App-nic"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.Snet02.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_windows_virtual_machine" "VM03" {
  name                = "App-VM"
  resource_group_name = azurerm_resource_group.rg01.name
  location            = "East US"
  size                = "Standard_D2as_v7"
  admin_username      = "azureuser"
  admin_password      = "***************"
  network_interface_ids = [
    azurerm_network_interface.nic03.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }
}

resource "azurerm_network_interface" "nic04" {
  name                = "DB-nic"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.Snet03.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_windows_virtual_machine" "VM04" {
  name                = "DB-VM"
  resource_group_name = azurerm_resource_group.rg01.name
  location            = azurerm_resource_group.rg01.location
  size                = "Standard_D2as_v5"
  admin_username      = "azureuser"
  admin_password      = "Nationindia@91"
  network_interface_ids = [
    azurerm_network_interface.nic04.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }
}

resource "azurerm_public_ip" "PIP01" {
  name                = "PublicIPForLB"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
  allocation_method   = "Static"
}

resource "azurerm_lb" "Test-LB" {
  name                = "App-LB"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name

  frontend_ip_configuration {
    name                 = "PublicIPAddress"
    public_ip_address_id = azurerm_public_ip.PIP01.id
  }
}

resource "azurerm_lb_backend_address_pool" "web-backend" {
  name            = "Webbackendpool"
  loadbalancer_id = azurerm_lb.Test-LB.id
}

resource "azurerm_lb_backend_address_pool_address" "address01" {
  name                    = "Web-vm"
  backend_address_pool_id = azurerm_lb_backend_address_pool.web-backend.id
  virtual_network_name      = azurerm_virtual_network.Vnet01.id
  ip_address              = "10.0.0.1"
}

resource "azurerm_network_interface_backend_address_pool_association" "DB-VM" {
  network_interface_id    = azurerm_network_interface.nic04.id
  ip_configuration_name   = "internal"
  backend_address_pool_id = azurerm_lb_backend_address_pool.web-backend.id
}

resource "azurerm_lb_probe" "probe01" {
  loadbalancer_id = azurerm_lb.Test-LB.id
  name            = "http-running"
  port            =  80
}
resource "azurerm_lb_rule" "rule01" {
  loadbalancer_id                = azurerm_lb.Test-LB.id
  name                           = "HTTPRule"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = "PublicIPAddress"
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.web-backend.id]
  probe_id                       = azurerm_lb_probe.probe01.id
}
resource "azurerm_storage_account" "stgacc" {
  name                     = "newstg01"
  resource_group_name      = azurerm_resource_group.rg01.name
  location                 = azurerm_resource_group.rg01.location
  account_tier             = "Standard"
  account_replication_type = "GRS"

}

resource "azurerm_storage_share" "Fileshare" {
  name               = "fileshare"
  storage_account_id = azurerm_storage_account.stgacc.id
  quota              = 100
}

resource "azurerm_storage_container" "Container01" {
  name                  = "app"
  storage_account_id    = azurerm_storage_account.stgacc.id
  container_access_type = "private"
}

resource "azurerm_storage_blob" "Blob" {
  name                 = "appblob"
  storage_container_id = azurerm_storage_container.Container01.id
  type                 = "Block"
}

resource "azurerm_private_endpoint" "PE01" {
  name                = "Test-PE"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
  subnet_id           = azurerm_subnet.Snet05.id

  private_service_connection {
    name                           = "stg-privateserviceconnection"
    private_connection_resource_id = azurerm_storage_account.stgacc.id
    subresource_names              = ["blob"]
    is_manual_connection           = false
  }


}

data "azurerm_client_config" "current" {}


resource "azurerm_key_vault" "kv01" {
  name                = "projectkey09"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
  tenant_id           = data.azurerm_client_config.current.tenant_id
  sku_name            = "standard"
  rbac_authorization_enabled  = true
}

resource "azurerm_role_assignment" "DB_kv_access" {
  scope                = azurerm_key_vault.kv01.id
  role_definition_name = "Key Vault Secrets User"
  principal_id         = azurerm_windows_virtual_machine.VM04.identity[1].principal_id
}

resource "azurerm_log_analytics_workspace" "log01" {
  name                = "test-workspace"
  location            = azurerm_resource_group.rg01.location
  resource_group_name = azurerm_resource_group.rg01.name
  sku                 = "PerGB2018"
  retention_in_days   = 30
}

resource "azurerm_monitor_workspace" "monitor01" {
  name                = "test-monitor"
  resource_group_name = azurerm_resource_group.rg01.name
  location = azurerm_resource_group.rg01.location
  
}
